# service

./: .env.example  .gitignore  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  Dockerfile.streamlit  Makefile  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  docker-compose.yml  main.py  nujn.md  obsyas.md  parse_all.py  pyproject.toml  requirements.txt  run.py  test_all.py  yoyo.ini
.devcontainer/: devcontainer.json
.streamlit/: config.toml
config/: __init__.py  constants.py  settings.py
data/: RC_F30_04_2026_T07_05_2026.xlsx
data/model_artifacts/: backtest_crisis_episodes.csv  catboost_lsi_model.cbm  feature_importance.csv  lsi_dashboard_extract.csv  lsi_ml_metadata.joblib  lsi_ml_model.cbm  module_importance_catboost.csv  shap_module_contributions.csv
docs/: LSI_INTEGRATION_REPORT.md  METRICS_REPORT.md  metrics_snapshot.json  obyas_mod1.md  obyas_mod2.md  obyas_mod3.md  obyas_mod4.md  obyas_mod5.md  read_obs.md
memory/: project_config.md
migrations/: 0001_add_fetch_cache.rollback.sql  0001_add_fetch_cache.sql
ml_model/: MODEL_EXPLANATION.md  README.md  TASKS.md  inference.py  plot_from_csv.py  requirements.txt  run_pipeline.py
ml_model/data/: m1_reserves.csv  m2_repo_params.csv  m3_ofz_full.csv  m5_bliquidity.csv  m5_sors_federal_funds.csv
ml_model/src/: features.py  llm_commentator.py  lsi_ml.py  plotting.py  stress_components.py
pars_data/: m1_ruonia.csv  m2_keyrate.csv  m2_repo_auctions.csv  m2_repo_cbr.csv  m2_repo_full.csv  m3_ofz_auctions.csv  m4_tax_calendar.csv  m5_bliquidity.csv  m5_roskazna.csv  m5_roskazna_UNAVAILABLE.txt  m5_sors_budget_funds.csv
scripts/: clear_cache.py  cloud_init.py  compute_metrics.py  db_migrate.py  health_check.py
src/application/: __init__.py  backtest.py  lsi_refresh.py  pipeline.py  scheduler.py
src/domain/: __init__.py
src/domain/aggregation/: __init__.py  (+1 more)
src/infrastructure/: http_client.py
src/presentation/: app.py  data_loader.py  llm_commentary.py  metrics.py
tests/: __init__.py  conftest.py
tests/integration/: test_chat_rag.py  test_db_repository.py  test_pipeline.py
tests/unit/: __init__.py  test_llm.py  test_lsi_engine.py  test_m1_reserves.py  test_m2_repo.py  test_m3_ofz.py  test_m4_tax.py  test_m5_treasury.py  test_mad.py
(+72 files in other folders)
