[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ru-liquidity-sentinel"
version = "0.1.0"
description = "Система мониторинга ликвидности рубля"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "typer[all]==0.9.0",
    "pydantic==2.5.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "streamlit==1.29.0",
    "plotly==5.18.0",
    "ollama==0.1.17",
    "apscheduler==3.10.4",
    "psycopg2-binary==2.9.9",
    "pyarrow==14.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
]

[project.scripts]
sentinel = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "tests*"]
