[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ru-liquidity-sentinel"
version = "0.1.0"
description = "Система мониторинга ликвидности рубля"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "yoyo-migrations>=7.3.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.57.0",
    "plotly>=5.24.0",
    "ollama>=0.6.2",
    "apscheduler>=3.11.1,<4.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=24.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "isort>=5.13.0",
]

[project.scripts]
sentinel = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "tests*"]